--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,25 +18,39 @@
 <body style="margin: 20px;">
 
     <h1>Today</h1>  
-        <table class="table table-striped table-bordered table-hover" style="max-width: 500px;">
+        <table class="table table-striped table-bordered table-hover" style="max-width: 600px;">
             <tr>
-                <td colspan="3">
-                    @using (var form = Html.BeginForm("CreateUpdate", "Home", FormMethod.Post))
-                     {
-                        @Html.HiddenFor(model => model.EditableItem.Id)
+
+                @using (var form = Html.BeginForm("CreateUpdate", "Home", FormMethod.Post))
+                {
+                    <td width="60%">
+                        @*@Html.HiddenFor(model => model.EditableItem.Id)*@
                         <div class="input-group">
-                            @Html.TextBoxFor(model => model.EditableItem.Title, new { @class = "form-control" })
-                            <div class="input-group-append">
-                                <button type="submit" class="btn btn-success">@(Model.EditableItem.Id > 0 ? "Update" : "Add")</button>
-                            </div>
+                            @*@Html.TextBoxFor(model => model.EditableItem.Title, new { @class = "form-control" })*@
+                            <input asp-for = "@Model.EditableItem.Title" class="form-control" />
                         </div>
+                    </td>
+
+                    <td>
+                        <div>
+                        <input type="datetime-local" asp-for="@Model.EditableItem.Date"/>
+
+                        </div>
+                    </td>
+
+                    <td>
+                        <div class="input-group-append">
+                            
+                            <button type="submit" class=" btn btn-success">@(Model.EditableItem.Id > 0 ? "Update" : "Add")</button>
+                        </div>
+                    </td>
                         @Html.ValidationSummary()
-                     }
-
-                </td>
+                        }
 
 
-            </tr>
+
+
+                </tr>
                 @foreach (var item in Model.ToDoItems)
                 {
 
@@ -49,7 +63,7 @@
 
 
                         <td class="text-right">
-                            @item.Date.ToShortDateString()
+                            @item.Date
                         </td>
 
                         <td class="text-center">
@@ -62,3 +76,7 @@
         </table>
 </body>
 </html>
+
+<style>
+
+</style>
