Added History View. Added link to enter History page. Added link to return to Home from History. Added Actions to Home Controller for the history functions (Display and Clear History). Added method to ViewModel to execute query and clear history. Switched main query for a stored procedure.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,13 +2,6 @@
 @model Planner.Models.ToDoItemViewModel
 @{
     ViewData["Title"] = "Index";
-
-
-
-
-
-
-
 }
 
 
@@ -23,8 +16,14 @@
 
 
 <body style="margin: 20px;">
+
     <div class="today">
-        <h1>Today</h1>
+        <div>
+            <a href="Home/History">History</a>
+        </div>
+        <div>
+            <h1>Today</h1>
+        </div style="margin-top:20px">
         <table class="table table-striped table-bordered table-hover" style="max-width: 600px;">
             <tr>
 
@@ -85,7 +84,7 @@
 
         </table>
     </div>
-    <div class="tomorrow">
+    <div class="tomorrow" style="margin-top:30px">
         <h1>Tomorrow</h1>
         <table class="table table-striped table-bordered table-hover" style="max-width: 600px;">
             
